- reducción de clases + actualizado README + añadidas habilidades blandas + da formato a items

--- a/portfolioWeb.html
+++ b/portfolioWeb.html
@@ -51,6 +51,9 @@
   </header>
 
 
+
+
+  
   <div class="container-md sobreMi_contenedor">
     <div class="row sobreMi_item_A">
         <h1>Desarrollador Web</h1>
@@ -66,76 +69,78 @@
     </div>
   </div>
 
-    <div class="seccion experiencia container-md">
+
+
+  <div class="seccion experiencia container-md">
       <h1>Experiencia laboral</h1>
-      <div class="experiencia_item">
       
+      <div class="item">
+        <h3>Elecomp</h3>
+        <p>
+          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptate tenetur dolorem inventore? Quae iusto id ut tempora debitis nostrum impedit, ipsum libero nobis laudantium voluptate, expedita nesciunt itaque. Numquam, nam.
+        </p>
+      </div>
+      <div class="item">
+        <h3>Candy-Muebles</h3>
+        <p>
+Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptate tenetur dolorem inventore? Quae iusto id ut tempora debitis nostrum impedit, ipsum libero nobis laudantium voluptate, expedita nesciunt itaque. Numquam, nam.
+        </p>
+      </div>
+      <div class="item">
         <h3>Sitio de experiencia</h3>
         <p>
+          Se supone que al hacer click en ésto se desplegarán más detalles.
+          lugares donde trabajé, con titulo de puesto, periodo, logo
+          de emnpresa y descripcion de las actividades realizadas
           lugares donde trabajé, con titulo de puesto, periodo, logo
           de emnpresa y descripcion de las actividades realizadas, y el motivo por el que lo considero relevante
         </p>
       </div>
-      <div class="experiencia_item">
-        <h3>Elecomp</h3>
-        <p>
-          lugares donde trabajé, con titulo de puesto, periodo, logo
-          de emnpresa y descripcion de las actividades realizadas
-        </p>
-      </div>
-      <div class="experiencia_item">
-        <h3>Candy-Muebles</h3>
-        <p>
-          lugares donde trabajé, con titulo de puesto, periodo, logo
-          de emnpresa y descripcion de las actividades realizadas
-        </p>
-      </div>
-      <div class="experiencia_item">
-        <h3>Sitio de experiencia</h3>
-        <p>
-          Se supone que al hacer click en ésto se desplegarán más detalles.
-        </p>
-      </div>
     </div>
 
-    <div class="seccion educacion container-md">
+    <div class="seccion container-md">
     
-Conocimientos
-EDUCACION:
+<h1>Conocimientos</h1>
+EDUCACION: certificaciones y cursos.
+<br>
+<div class="item">conocimientos de html</div>
+<div class="item"> css</div>
+<div class="item">javascript</div>
+<div class="item">java (basico)</div>
+<div class="item">c++(básico)</div>
+<div class="item">experiencia con git y github</div>
+</div>
 
 
-escribir toda la infromación de mi formación académica,
+<div class="seccion container-md">
+<h1>HABILIDADES BLANDAS Y DURAS</h1>
 <br>
-certificaciones
-<br>
-ARGENTINA PROGRAMA 1
-<br>
-cursos
-<br>
-y todo lo relacionado al titulo que actualmente cuento.
-<br>
-detallar la informacion del instituto, el logo, nombre, carrera o titulo y en que periodo o año. o una forma de visualización llamativa visualizado como porcentajes
-<br>
-conocimientos de html, css, javascript, java (basico), c++(básico) experiencia con git, github.
-<br>
-HABILIDADES BLANDAS Y DURAS
-<br>
-comunicación, 
-<br>
-nivel medio de ingles
+<div class="item">nivel medio de ingles</div>
+<div class="item">Trabajo en equipo</div>
+<div class="item">comunicación</div> 
+<div class="item">Capacidad analítica y de resolución de problemas</div>
+<div class="item">Atención al detalle</div>
+<div class="item">Deseos de aprender y estar a la vanguardia</div>
+<div class="item">Adaptabilidad, saber priorizar y manejo de tareas múltiples</div>
+<div class="item">Lógica matemática y habilidades para la computación e informática</div>
+<div class="item">Ética, compromiso, honestidad e integridad</div>
+
+
+
+
+
+
+
+
+
+
     </div>
 
 
-
-
-
-    <div class="seccion seccion_proyectos container-md">
-      <p>
-        PROYECTOS: informacion sobre los proyectos en los que me involucre, que
-        desarrolle o que estan en desarrollo, incluyendo el portofolio. debe
-        contar con un nombre, fecha de realizacion, descripcion del proyecto y
-        link a su evidencia, tambien se pueden adjuntar imagenes de ellos.</p>
-    </div>
+    <div class="seccion container-md">
+      <h1>PROYECTOS</h1>
+      <div class="item">PortfolioWeb</div>
+      </div>
 
 </body>
 </html>
